updated appuser to have a login, redirecting logged in users to their profiles, start of posts built out

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Log in!</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <div th:replace="~{common :: header}"></div>
 </head>
 <body>
-<h1>Log in does not exist yet</h1>
-
+<div>
+    <form action="/perform_login" method="post">
+        <input type="text" name="username" required placeholder="Username"/>
+        <input type="password" name="password" required placeholder="Password"/>
+        <button type="submit">Submit</button>
+    </form>
+</div>
 </body>
 </html>
