--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -3,6 +3,8 @@
 <head>
     <title>Sign up!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <div th:replace="~{common :: header}"></div>
+
 </head>
 <body>
 
