user is able to create a post connected to them, posts show up on users profile page

--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -9,7 +9,12 @@
 
 <!-- navigation fragment -->
 <div th:fragment="navigation">
-    nav bar
+    <ul>
+        <li><a href="signin.html">Sign Up</a></li>
+        <li><a href="login.html">Log In</a></li>
+        <li><a href="user.html">My Profile</a></li>
+        <li><a href="post.html">Create a Post</a></li>
+    </ul>
 </div>
 </body>
 </html>
