--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,6 +6,7 @@
     <div th:replace="~{common :: header}"></div>
 </head>
 <body>
+<div th:replace="~{common :: navigation}"></div>
 <div>
     <form action="/perform_login" method="post">
         <input type="text" name="username" required placeholder="Username"/>
