--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -5,9 +5,9 @@
     <title>New Post</title>
 </head>
 <body>
-<form action="/signup" method="post">
+<form action="/newpost" method="post">
     <input type="text" name="body" required placeholder="Body"/>
-    <input type="date" name="createdAt" required placeholder="Time of Post"/>
+    <input type="text" name="createdAt" required placeholder="Time of Post"/>
 
     <button type="Create">Submit</button>
 </form>
